# flask-background-tasks-monolith

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yml  docker-compose.yml  heroku.yml  init.sql  pyproject.toml  results.csv
backend/: app.py  celery_utils.py  factory.py  pyproject.toml  requirements.txt  settings.py  tasks.py  z.py
backend/constants/: extensions.py  format.py  limit.py
backend/converter/: tasks.py
backend/converter/utils/: db.py
backend/custom_email/: email_sender.py
backend/docs/: P1.postman_collection.json
backend/models/: admin.py  contest.py  contest.py.save  submission.py  user.py
backend/schemas/: admin.py  contest.py  contest.py.save  submission.py  user.py
backend/utils/: aws_utils.py  cache.py  converter.py  db.py  extensions.py  s3fs_utils.py  validators.py
backend/views/: contest.py  contest.py.save  submission.py  user.py
front/: package.json
front/src/: App.js  config.js  index.js  theme.js
front/src/components/: AuthProvider.js  AuthStatus.js  ContestDetail.js  Copyright.js  Footer.js  NavBar.js  SubmissionForm.js  VoiceCard.js
front/src/helpers/: auth.js
front/src/hooks/: useAuth.js  useFetchRequest.js
front/src/layouts/: AdminLayout.js  RequireAuth.js
front/src/pages/: Contest.js  ContestPage.js  ContestsPage.js  LandingPage.js  LoginPage.js  SignUpPage.js  SubmitPage.js
front/src/services/: useContestService.js  useContestsService.js  useOtroService.js  useSubmissionForm.js  useUsersService.js
front/src/utils/: dateUtils.js  jwtUtils.js  regExpUtils.js
