[tool.poetry]
name = "flask-background-tasks-monolith"
version = "0.1.0"
description = "flask background tasks monolith app"
authors = ["Juan Correa jp.correa@uniandes.edu.co","Jhonatan Hernandez je.hernandezr@uniandes.edu.co", "Carlos Salazar ca.salazara@uniandes.edu.co"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
